--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,6 @@
     "outDir": "dist",
     "declaration": true
   },
-  "exclude": ["node_modules", "test", "dist"]
+ // "exclude": ["node_modules", "test", "dist"],
+  "include": ["./"]
 }
