added dist to repo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,5 @@
     "outDir": "dist",
     "declaration": true
   },
- // "exclude": ["node_modules", "test", "dist"],
-  "include": ["./"]
+  "exclude": ["node_modules", "test", "dist"]
 }
